fix: update `doogu` to `v4.0.4`

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "doogu": "3.2.13",
+    "doogu": "4.0.4",
     "vite-plugin-resolve-umd-format": "1.0.0"
   },
   "config": {
@@ -54,10 +54,7 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "eslintConfig": {
-    "extends": "./node_modules/doogu/eslint"
-  },
-  "prettier": "doogu/prettier.json",
+  "prettier": "doogu/prettier.config.js",
   "release": {
     "extends": "doogu/release.config.js"
   }
